SERVER-46679 Transaction test fails with Stale Shard Version error on 4.5