src/mongo/s/commands/strategy.cpp
@@ -670,7 +670,7 @@ void runCommand(OperationContext* opCtx,
 
                     // TODO SERVER-39704 Allow mongos to retry on stale shard, stale db, snapshot,
                     // or shard invalidated for targeting errors.
-                    if (!txnRouter.canContinueOnStaleShardOrDbError(commandName)) {
+                    if (!txnRouter.canContinueOnStaleShardOrDbError(commandName, ex.toStatus())) {
                         (void)catalogCache->getCollectionRoutingInfoWithRefresh(
                             opCtx, ex.extraInfo<ShardInvalidatedForTargetingInfo>()->getNss());
                         addContextForTransactionAbortingError(
@@ -713,7 +713,6 @@ void runCommand(OperationContext* opCtx,
                 }
 
                 auto catalogCache = Grid::get(opCtx)->catalogCache();
-
                 if (auto staleInfo = ex.extraInfo<StaleConfigInfo>()) {
                     catalogCache->invalidateShardOrEntireCollectionEntryForShardedCollection(
                         opCtx,
@@ -747,7 +746,7 @@ void runCommand(OperationContext* opCtx,
 
                     // TODO SERVER-39704 Allow mongos to retry on stale shard, stale db, snapshot,
                     // or shard invalidated for targeting errors.
-                    if (!txnRouter.canContinueOnStaleShardOrDbError(commandName)) {
+                    if (!txnRouter.canContinueOnStaleShardOrDbError(commandName, ex.toStatus())) {
                         addContextForTransactionAbortingError(
                             txnRouter.txnIdToString(),
                             txnRouter.getLatestStmtId(),
@@ -788,7 +787,7 @@ void runCommand(OperationContext* opCtx,
 
                     // TODO SERVER-39704 Allow mongos to retry on stale shard, stale db, snapshot,
                     // or shard invalidated for targeting errors.
-                    if (!txnRouter.canContinueOnStaleShardOrDbError(commandName)) {
+                    if (!txnRouter.canContinueOnStaleShardOrDbError(commandName, ex.toStatus())) {
                         addContextForTransactionAbortingError(
                             txnRouter.txnIdToString(),
                             txnRouter.getLatestStmtId(),
