src/mongo/s/query/cluster_find.cpp
@@ -525,7 +525,7 @@ CursorId ClusterFind::runQuery(OperationContext* opCtx,
                                                                      ex->getVersionReceived());
 
             if (auto txnRouter = TransactionRouter::get(opCtx)) {
-                if (!txnRouter.canContinueOnStaleShardOrDbError(kFindCmdName)) {
+                if (!txnRouter.canContinueOnStaleShardOrDbError(kFindCmdName, ex.toStatus())) {
                     throw;
                 }
 
@@ -578,7 +578,7 @@ CursorId ClusterFind::runQuery(OperationContext* opCtx,
             catalogCache->setOperationShouldBlockBehindCatalogCacheRefresh(opCtx, true);
 
             if (auto txnRouter = TransactionRouter::get(opCtx)) {
-                if (!txnRouter.canContinueOnStaleShardOrDbError(kFindCmdName)) {
+                if (!txnRouter.canContinueOnStaleShardOrDbError(kFindCmdName, ex.toStatus())) {
                     if (ex.code() == ErrorCodes::ShardInvalidatedForTargeting) {
                         (void)catalogCache->getCollectionRoutingInfoWithRefresh(opCtx, query.nss());
                     }
